--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
           <p>
             On the right is the Object and Function graph for
-            a simple Backbone app (<a href='#' rel='show-code' data-content='View'> the code</a>).
+            a simple Backbone app (<a href='#' rel='show-code' data-content='view'> the code</a>).
           </p> 
 
           <p>Hit the button to start the backbone app and interact with it.</p>
@@ -50,11 +50,11 @@
           </div>
           
           <p>
-            This is an experiment by <a href='http://blog.latentflip.com'>Philip Roberts</a> (<a href='http://twitter.com'>@philip_roberts</a>). 
+            This is an experiment by <a href='http://blog.latentflip.com'>Philip Roberts</a>. You can follow me on twitter <a href='http://twitter.com'>@philip_roberts</a>.
           </p>
 
           <p>
-            If you have any thoughts <a href='#comments'>leave me a comment</a>.
+            If you have any thoughts <a href='#comments'>please leave me a comment</a>.
           </p>
 
           <div class="fb-like" data-send="true" data-layout="button_count" data-width="100" data-show-faces="false"></div>
@@ -123,10 +123,10 @@
             var $gist = $('#the-code');
             if ($gist.is(':visible')) {
               $gist.slideUp();
-              $(this).attr('data-content', 'View')
+              $(this).attr('data-content', 'view')
             } else {
               $gist.slideDown(200);
-              $(this).attr('data-content', 'Hide')
+              $(this).attr('data-content', 'hide')
             }
             
           });
