--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p class='p-first'>This is a first attempt at instrumenting a JavaScript application.</p>
 
           <p>
-            Instrumenting is performed by recursively iterating over the applications namespace to build the graph, and decorating any functions to trigger events when they are called.
+            Instrumenting is performed by recursively iterating over the application's namespace to build the graph, and decorating any functions to trigger events when they are called.
           </p>
 
           <p>
