--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
       </div>
     </div>
 
+    <footer>
+      <a href="https://github.com/latentflip/violin"><img id="fork" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    </footer>
+
     <script>
       require(['instrument'], function(App) {
         $(function() {
@@ -141,6 +145,8 @@
         });
       });
     </script>
+
+
 
   </body>
 
