--- a/index.html
+++ b/index.html
@@ -35,15 +35,21 @@
           <h1>Violin <small>Instrumenting JavaScript</small></h1>
 
           <p class='p-first'>
-            This is an experimenting in instrumenting JavaScript applications. 
+            This is an experiment in instrumenting JavaScript applications. 
           </p>
 
           <p>
             On the right is the Object and Function graph for
-            a simple Backbone app (<a href='#' rel='show-code' data-content='view'> the code</a>).
+            a simple Backbone app (<a href='#' rel='show-code' data-content='view'> the code</a>). 
+          </p>
+
+          <p>
+            The app's code has been instrumented to draw and animate the graph as the JavaScript runs without having to modify the app's original code at all (by hand anyway).
           </p> 
 
           <p>Hit the button to start the backbone app and interact with it.</p>
+          
+          <p><i>Metaprogramming rocks :)</i>.</p>
 
           <div class='well'>
             <h2>The App</h2>
