Tidy up css locations

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <script src='jam/require.js'></script>
-    <link rel='stylesheet' type='text/css' href='bootstrap.css'>
-    <link rel='stylesheet' type='text/css' href='style.css'>
+    <link rel='stylesheet' type='text/css' href='css/bootstrap.css'>
+    <link rel='stylesheet' type='text/css' href='css/style.css'>
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
