--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src='jam/require.js'></script>
+    <script src='js/vendor/require.js'></script>
     <link rel='stylesheet' type='text/css' href='css/bootstrap.css'>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
     <script type="text/javascript">
@@ -121,7 +121,7 @@
     </footer>
 
     <script>
-      require(['app'], function(App) {
+      require(['js/app'], function(App) {
         $(function() {
           $('a[rel=startApp]').click( function() {
             $(this).remove()
