Fix link on homepage

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           
           <p>
-            This is an experiment by <a href='http://blog.latentflip.com'>Philip Roberts</a>. You can follow me on twitter <a href='http://twitter.com'>@philip_roberts</a>.
+            This is an experiment by <a href='http://blog.latentflip.com'>Philip Roberts</a>. You can follow me on twitter <a href='http://twitter.com/philip_roberts'>@philip_roberts</a>.
           </p>
 
           <p>
