Fix twitter 0 count.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </p>
 
           <div class="fb-like" data-send="true" data-layout="button_count" data-width="100" data-show-faces="false"></div>
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bit.ly/RoRp52" data-text="Visualizing and instrumenting Javascript apps" data-via="philip_roberts">Tweet</a>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://latentflip.github.com/violin" data-counturl="http://latentflip.github.com/violin" data-text="Visualizing and instrumenting Javascript apps" data-via="philip_roberts">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
           <div id='the-code'>
